[package]
name = "nifzenoh"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "nifzenoh"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.26.0"
# zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git"}
zenoh = { version = "0.6.0-bata.1", default-features = true}
async-std = { version = "=1.12.0", default-features = false, features = [
  "attributes",
] }
env_logger = "0.10.0"
clap = "4.0.29"
futures = "0.3.25"
flume = "0.10.14"