[package]
name = "nifzenoh"
version = "0.1.3"
authors = []
edition = "2018"

[lib]
name = "nifzenoh"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
zenoh = { version = "0.10.0-rc", default-features = true }
async-std = { version = "=1.12.0", default-features = false, features = [
  "attributes",
] }
env_logger = "0.10.0"
clap = "4.4.6"
futures = "0.3.28"
flume = "0.11.0"
