[package]
name = "nifzenoh"
version = "0.1.5"
authors = []
edition = "2018"

[lib]
name = "nifzenoh"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.30.0"
zenoh = { version = "0.10.1-rc", default-features = true }
async-std = { version = "=1.12.0", default-features = false, features = [
  "attributes",
] }
env_logger = "0.10.1"
clap = "4.4.16"
futures = "0.3.30"
flume = "0.11.0"
