[package]
name = "zenohex_nif"
version = "0.3.2"
authors = []
edition = "2021"

[lib]
name = "zenohex_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# WHY we specify NIF 2.15 https://github.com/biyooon-ex/zenohex/issues/71
rustler = { version = "=0.36.1", features = ["nif_version_2_15"] }
zenoh = "=1.3.3"
