[package]
name = "zenohex_nif"
version = "0.7.1"
authors = []
edition = "2021"

[lib]
name = "zenohex_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# features
#   WHY we specify NIF 2.15 https://github.com/biyooon-ex/zenohex/issues/71
rustler = { version = "=0.37.0", features = ["nif_version_2_15"] }

# version
#   When updating the Zenoh version, make sure to update the Rust version
#   in `rust-toolchain.toml` to match the one used in the Zenoh repository.
#   Zenoh plugins are compiled using this version, and a mismatch will prevent plugins from being loaded.
# features
#   zenoh::session::EntityGlobalId needs "unstable"
#   "plugins" needs "unstable" and "internal"
zenoh = { version = "=1.7.2", features = ["unstable", "internal", "plugins"] }

log = { version = "0.4", features = ["std"] }
